# jwt-auditor

./: .gitignore  DEMO.md  Justfile  README.md  pyproject.toml
learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
src/jwt_auditor/: __init__.py  checks.py  decoder.py  main.py  models.py  output.py  signatures.py  wordlist.py
tests/: conftest.py  test_checks.py  test_cli.py  test_decoder.py  test_models.py  test_signatures.py
